# Raspberry-Pi-App-deployer

./: README.md  app.py  rpc_client.py  rpc_server.py
ClientSide/: app.py  webhook.py
ClientSide/UI/: index.html
ClientSide/UI/assets/css/: style.css
ClientSide/UI/assets/js/: scripts.js
ClientSide/templates/: index.html
DeployerCli/: README.md  deployercli.py  gitAuthToken.py
Fabric/: app.py
PiClient/: ClientWorker.py  GitRepoHandler.py  SampleServer.py  VirtualEnv.py
RabbitMQ/src/: rpc_client.py  rpc_server.py
deployer/: webhook.py
deployer/PiClient/: README.md  SampleServer.py  requirements.txt  setup.cfg
deployer/PiClient/client/: client_service.py
deployer/PiClient/client/common/: GitRepoHandler.py  VirtualEnv.py  config.py  constants.py
deployer/PiClient/client/service/: ClientWorker.py
deployer/server/: requirements.txt  setup.cfg
deployer/server/deployer/: server.py  wsgi.py
deployer/server/deployer/common/: config.py  constants.py
deployer/server/deployer/service/: periodic_task.py  rabbitmq_client.py  rabbitmq_thread.py
deployer/static/assets/js/: scripts.js
webUI/: index.html
webUI/assets/css/: style.css
