[metadata]
name = deployer-client
version = 0.1
author = CMPE-273
description-file = README.md
classifiers=
    Development Status :: 1 - Beta
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages=
    client

[entry-points]
client = client.service:main
