[metadata]
name = deployer
version = 0.1
author = CMPE-273
author-email = amita.kamat5797@gmail.com
description-file = README.md
classifiers=
    Development Status :: 1 - Beta
    Topic :: Utilities
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages=
    deployer

[entry-points]
deployer = deployer.server:main
